[tool.poetry]
name = "aquiche"
version = "1.1.0"
description = "Async cache in-memory"
authors = ["Jakub Jantosik <jakub.jantosik@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = { version = "^4.4", python = "<3.10" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.1"
pytest-asyncio = "^0.19"
pytest-freezegun = "^0.4"
pytest-mock = "^3.8"
pytest-timeout = "^2.1"
black = "^22.0"
mypy = "^0.981"
pylint = "^2.15"

[build-system]
requires = ["poetry-core>=1.3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "ci:test"
lint = "ci:lint"
